--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "little-state-machine": "^3.1.4",
+    "material-ui-rating": "^4.0.0-beta.2",
     "ra-data-json-server": "^3.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
