--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "little-state-machine": "^3.1.4",
     "material-ui-rating": "^4.0.0-beta.2",
     "ra-data-json-server": "^3.11.0",
+    "ra-data-simple-rest": "^3.10.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
