--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "admin-on-rest": "^1.4.1",
+    "antd": "^4.9.4",
     "axios": "^0.21.0",
     "little-state-machine": "^3.1.4",
     "material-ui-rating": "^4.0.0-beta.2",
